<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="12dp"
    android:background="@color/backgroundColor2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/imgBtnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/backgroundColor2"
                android:contentDescription="@string/desc_floating"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/backgroundColor1" />

            <FrameLayout
                android:id="@+id/profileImageContainer"
                android:layout_width="240dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/imgProduct"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/desc_floating"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo_dstock" />

                <ImageView
                    android:id="@+id/imgBtnCamera"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:background="@drawable/circle_background"
                    android:contentDescription="@string/desc_floating"
                    android:elevation="4dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_camera"
                    app:tint="@color/black" />
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameProductAddContainer"
                style="@style/TextInputLayoutStyle2"
                android:layout_width="345dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/backgroundColor1"
                android:imeOptions="actionNext"
                app:helperText="@string/required"
                app:helperTextTextColor="@color/red_button"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtNameProductAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:hint="@string/add_product_name"
                    android:inputType="text"
                    android:gravity="center"
                    android:lines="1"
                    android:textColor="@color/backgroundColor1"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantityProductAddContainer"
                style="@style/TextInputLayoutStyle2"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/letters"
                app:helperText="@string/required"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:errorEnabled="true"
                app:errorTextColor="@color/error_color">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtQuantityProductAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/convergence"
                    android:gravity="end"
                    android:hint="@string/add_product_quantity"
                    android:inputType="number"
                    android:lines="1"
                    android:textColor="@color/letters"
                    android:textSize="22sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.camera.view.PreviewView
                android:id="@+id/previewView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/priceProductAddContainer"
                    style="@style/TextInputLayoutStyle2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/backgroundColor1"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    android:hint="@string/add_product_perprice"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPriceProductAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/convergence"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:textAlignment="center"
                        android:textColor="@color/backgroundColor1"
                        android:textSize="22sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnerCurrency"
                    android:layout_width="100dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="1dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/spinner_border_color" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/weightProductAddContainer"
                    style="@style/TextInputLayoutStyle2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/backgroundColor1"
                    app:helperText="@string/required"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    android:hint="@string/add_product_perweight"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/error_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtWeightProductAdd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/convergence"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:textAlignment="center"
                        android:textColor="@color/backgroundColor1"
                        android:textSize="22sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/spinnerWeight"
                    android:layout_width="100dp"
                    android:layout_height="52dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="1dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/spinner_border_color"/>
            </LinearLayout>

            <Spinner
                android:id="@+id/spinnerCategory"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/spinner_border_color" />

            <Spinner
                android:id="@+id/spinnerSubCategory"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_border_color" />

            <Spinner
                android:id="@+id/spinnerProvider"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/spinner_border_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnCancelAddProduct"
                    style="@style/RedButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/btnSaveChangesAddProduct"
                    style="@style/NormalButton"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="56dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/save_change" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>